# EmailDJ

./: .gitignore  0.5 mvp plan.rtf  AGENTS.md  ARCHITECTURE.md  EMAILDJ EVAL HARNESS + LLM JUDGE — MASTER CODEX PROMPT.rtf  EmailDJ_Concept.md  Makefile  README.md  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: blueprint.py  cache.py  config.py  enrichment.py  openai_client.py  prompts.py  rendering.py  schemas.py  server.py  sse.py  tools.py  validators.py
backend/evals/: __init__.py  ci_gate.py  debug_stage.py  eval_payloads.py  eval_report.py  eval_run.py  stage_judge.py
backend/tests/: test_ai_orchestrator_fail_closed.py  test_api_no_provenance_leak.py  test_api_smoke.py  test_budget_planner.py  test_debug_prompt_flag.py  test_engine_contract_hardening.py  test_engine_evals.py  test_eval_ci_gate.py  test_eval_run_artifacts.py  test_length_beats_non_outbound.py  test_llm_realizer_pipeline.py  test_messaging_brief_quality.py  test_postprocess.py  test_preset_contracts.py  test_prompt_assembly_contamination.py  test_research_api.py  test_sales_outbound_category.py  test_stage_a_sanitizer.py  test_stage_a_validator.py  test_stage_judge.py  test_stage_prompt_contracts.py  test_stage_runner.py  test_trace_artifacts.py  test_validators.py
hub-api/: .env.example  README.md  main.py  openapi.json  pyproject.toml  requirements.txt  runtime_debug.py
hub-api/agents/: graph.py  state.py
hub-api/api/: schemas.py
hub-api/context_vault/: cache.py  embedder.py  extractor.py  merger.py  models.py
hub-api/delegation/: engine.py  (+1 more)
(+4236 files in other folders)
