[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emaildj-mvp-0-5-backend"
version = "0.5.0"
description = "EmailDJ MVP 0.5 backend"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
